tdf#94262: fix performance of MakeTree_Impl(...) in templdlg.cxx

1. replace 2nd level for-loop with a helper unordered_map that
 maps style name to its pointer

2. replace 3rd level for-loop with std::lower_bound, since the
 children are inserted sorted (based on natural sort)

...and a few related, minor changes.

Change-Id: I48f59f2e1ca416de1e2957e0d1d3708ed6e67112